--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Decking</a></li>
+                <li><a href="#">Fencing</a></li>
+                <li><a href="#">Framing</a></li>
+                <li><a href="#">Retraining</a></li>
+                <li><a href="#">Panel</a></li>
+                <li><a href="#">Flooring</a></li>
+                <li><a href="#">Hardware</a></li>
+                <li><a href="#">Concrete</a></li>
+                <li><a href="#">Concrete</a></li>
+                <li><a href="#">Concrete</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
