--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="#">Flooring</a></li>
                 <li><a href="#">Hardware</a></li>
                 <li><a href="#">Concrete</a></li>
-                <li><a href="#">Concrete</a></li>
-                <li><a href="#">Concrete</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
