Created banner section

--- a/index.html
+++ b/index.html
@@ -4,25 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Landing Page</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Decking</a></li>
-                <li><a href="#">Fencing</a></li>
-                <li><a href="#">Framing</a></li>
-                <li><a href="#">Retraining</a></li>
-                <li><a href="#">Panel</a></li>
-                <li><a href="#">Flooring</a></li>
-                <li><a href="#">Hardware</a></li>
-                <li><a href="#">Concrete</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header class="">
+            <nav>
+                <div class="header">
+                    <div class="header__logo"><img src="Assets/Timber dealer logo-02 1.png" alt=""></div>
+                    <div class="header__nav">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Decking</a></li>
+                            <li><a href="#">Fencing</a></li>
+                            <li><a href="#">Framing</a></li>
+                            <li><a href="#">Retraining</a></li>
+                            <li><a href="#">Panel</a></li>
+                            <li><a href="#">Flooring</a></li>
+                            <li><a href="#">Hardware</a></li>
+                            <li><a href="#">Concrete</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="header__icons">
+                        <img src="Assets/search.png" alt="">
+                        <img src="Assets/user.png" alt="">
+                        <img src="Assets/cart.png" alt="">
+                    </div>
+                </div>
+            </nav>
+        </header>
 </body>
 </html>
