Created several sections

--- a/index.html
+++ b/index.html
@@ -8,32 +8,181 @@
     <title>Landing Page</title>
 </head>
 <body>
-        <header class="">
+        <header>
             <nav>
                 <div class="header">
-                    <div class="header__logo"><img src="Assets/Timber dealer logo-02 1.png" alt=""></div>
+                    <div class="header__logo">
+                        <a href="#"><img src="Assets/Timber dealer logo-02 1.png" alt=""></a>
+                    </div>
                     <div class="header__nav">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Decking</a></li>
-                            <li><a href="#">Fencing</a></li>
-                            <li><a href="#">Framing</a></li>
-                            <li><a href="#">Retraining</a></li>
-                            <li><a href="#">Panel</a></li>
-                            <li><a href="#">Flooring</a></li>
-                            <li><a href="#">Hardware</a></li>
-                            <li><a href="#">Concrete</a></li>
-                            <li><a href="#">News</a></li>
-                            <li><a href="#">Contact</a></li>
+                        <ul class="header__unordered">
+                            <li class="header__list"><a href="#">Home</a></li>
+                            <li class="header__list"><a href="#">Decking</a></li>
+                            <li class="header__list"><a href="#">Fencing</a></li>
+                            <li class="header__list"><a href="#">Framing</a></li>
+                            <li class="header__list"><a href="#">Retraining</a></li>
+                            <li class="header__list"><a href="#">Panel</a></li>
+                            <li class="header__list"><a href="#">Flooring</a></li>
+                            <li class="header__list"><a href="#">Hardware</a></li>
+                            <li class="header__list"><a href="#">Concrete</a></li>
+                            <li class="header__list"><a href="#">News</a></li>
+                            <li class="header__list"><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="header__icons">
-                        <img src="Assets/search.png" alt="">
-                        <img src="Assets/user.png" alt="">
-                        <img src="Assets/cart.png" alt="">
+                        <a href="#"><img class="header__img" src="Assets/search.png" alt=""></a>
+                        <a href="#"><img class="header__img" src="Assets/user.png" alt=""></a>
+                        <a href="#"><img class="header__img" src="Assets/cart.png" alt=""></a>
                     </div>
                 </div>
             </nav>
         </header>
+
+        <section>
+            <div class="section__banner">
+                <div class="banner__heading">
+                    <h1>Quality Timber in<br>Auckland<br>Lower Prices</h1>
+                    <p>Welcome to Timber Dealers – a small, independent, family-owned and operated timber supplier in Auckland (East Tamaki), committed to bringing you quality timber at lower prices!</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__services">
+                <div class="services__build">
+                    <img src="Assets/BUILDING MATERIALS.png" alt="">
+                    <h6>Building<br>Materials</h6>
+                </div>
+                <div class="services__flooring">
+                    <img src="Assets/FLOORING TIMBER.png" alt="">
+                    <h6>Flooring<br>Timber</h6>
+                </div>
+                <div class="services__decking">
+                    <img src="Assets/DECKING TIMBER.png" alt="">
+                    <h6>Decking<br>Timber</h6>
+                </div>
+                <div class="services__fencing">
+                    <img src="Assets/FENCING TIMBER.png" alt="">
+                    <h6>Fencing<br>Timber</h6>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__enquire">
+                <div class="enquire__trade-me">
+                    <img src="Assets/kiwi.png" alt="">
+                </div>
+                <div class="enquire__enquire-now">
+                    <div class="enquire__decking-timber">
+                        <h4>Decking Timber in Aukland</h4>
+                        <button class="btn--red">ENQUIRE NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__quality">
+                <div class="quality__container">
+                    <h1>GOOD QUALITY, GOOD PRICE<br>GOOD JOB!</h1>
+                    <p>With over 60 years of combined experience in the timber industry, you’re guaranteed knowledgeable, practical advice, whether you’re a large commercial developer, tradesman or a weekend DIY warrior. Because we’re small, a personal, friendly service is also guaranteed.</p>
+                    <p>Whether you’re working indoors or outdoors, on decking, fencing, flooring or other, chances are we stock what you need. Have a browse through our website; click on our TradeMe link for our listings, or click on our blackboard specials to view our monthly super specials. If you still can’t find what you’re looking for, we’ll do our best to get it for you. Ring or email us with your requirements.</p>
+                    <button class="btn--white">LEARN MORE</button>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__shop">
+                <div class="shop__container-first">
+                    <div class="shop__log">
+                        <h4>Can’t Beat A Timber Dealers Deal!</h4>
+                        <button class="btn--white">SHOP NOW</button>
+                    </div>
+                </div>
+                <div class="shop__container-second">
+                    <div class="shop__plank">
+                        <img src="Assets/plank.png" alt="">
+                        <p>INSTORE PICK UP TODAY!</p>
+                        <h4>100 x 50mm x 6.0m H3.2 Fence Rail</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__timbers">
+                <h1>Timbers</h1>
+            </div>
+            <div class="timbers__products">
+                <div class="timbers__product-1">
+                    <img src="Assets/product 1.png" alt="">
+                    <p class="timbers__location">AUKLAND</p>
+                    <h6>90mm x 45mm H3.2 Machine Gauged</h6>
+                    <h6 class="timbers__price">$159.99</h6>
+                </div>
+                <div class="timbers__product-2">
+                    <img src="Assets/product 2.png" alt="">
+                    <p class="timbers__location">AUKLAND</p>
+                    <h6>90mm x 19mm Premium Pine Decking</h6>
+                    <h6 class="timbers__price">$119.99</h6>
+                </div>
+                <div class="timbers__product-3">
+                    <img src="Assets/product 3.png" alt="">
+                    <p class="timbers__location">AUKLAND</p>
+                    <h6>150x19mm - 1.8m High Timber Fence Paling</h6>
+                    <h6 class="timbers__price">$39.99</h6>
+                </div>
+                <div class="timbers__product-4">
+                    <img src="Assets/product 4.png" alt="">
+                    <p class="timbers__location">AUKLAND</p>
+                    <h6>100 x 50mm x 6.0m H3.2 Fence Rail</h6>
+                    <h6 class="timbers__price">$29.99</h6>
+                </div>
+            </div>    
+        </section>
+
+        <footer>
+            <div class="footer">
+                <div class="footer__logo">
+                    <a href="#"><img src="Assets/Timber dealer logo-02 1.png" alt=""></a>
+                    <p>For any urgent enquiries, please call us on (09) 273 9471 or email us at sales@hillumber.co.nz</p>
+                    <img src="Assets/shoplocal.png" alt="">
+                </div>
+                <div class="footer__customer">
+                    <h5>Customer</h5>
+                    <ul class="footer__unordered">
+                        <li class="footer__list"><a href="#">Login | Register</a></li>
+                        <li class="footer__list"><a href="#">Track Order</a></li>
+                        <li class="footer__list"><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer__about-us">
+                    <h5>About Us</h5>
+                    <ul class="footer__unordered">
+                        <li class="footer__list"><a href="#">Returns Policy</a></li>
+                        <li class="footer__list"><a href="#">Privacy and Cookie</a></li>
+                        <li class="footer__list"><a href="#">Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer__quick-links">
+                    <h5>Customer</h5>
+                    <ul class="footer__unordered">
+                        <li class="footer__list"><a href="#">Home</a></li>
+                        <li class="footer__list"><a href="#">New Products</a></li>
+                        <li class="footer__list"><a href="#">News</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__black">
+                <div class="footer__copyright">
+                    <p>© 2022 Timber Dealers. All Rights Reserved.</p>
+                </div>
+                <div class="payment">
+                    <img src="Assets/mode of payment.png" alt="">
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
