--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
     <title>Landing Page</title>
 </head>
 <body>
@@ -105,7 +106,7 @@
                     <div class="shop__plank">
                         <img src="Assets/plank.png" alt="">
                         <p>INSTORE PICK UP TODAY!</p>
-                        <h4>100 x 50mm x 6.0m H3.2 Fence Rail</h4>
+                        <h4>100 x 50mm x 6.0m H3.2<br>Fence Rail</h4>
                     </div>
                 </div>
             </div>
@@ -113,34 +114,167 @@
 
         <section>
             <div class="section__timbers">
-                <h1>Timbers</h1>
-            </div>
-            <div class="timbers__products">
-                <div class="timbers__product-1">
-                    <img src="Assets/product 1.png" alt="">
-                    <p class="timbers__location">AUKLAND</p>
-                    <h6>90mm x 45mm H3.2 Machine Gauged</h6>
-                    <h6 class="timbers__price">$159.99</h6>
+                <div class="timbers__heading">
+                    <h1>Timbers</h1>
                 </div>
-                <div class="timbers__product-2">
-                    <img src="Assets/product 2.png" alt="">
-                    <p class="timbers__location">AUKLAND</p>
-                    <h6>90mm x 19mm Premium Pine Decking</h6>
-                    <h6 class="timbers__price">$119.99</h6>
-                </div>
-                <div class="timbers__product-3">
-                    <img src="Assets/product 3.png" alt="">
-                    <p class="timbers__location">AUKLAND</p>
-                    <h6>150x19mm - 1.8m High Timber Fence Paling</h6>
-                    <h6 class="timbers__price">$39.99</h6>
-                </div>
-                <div class="timbers__product-4">
-                    <img src="Assets/product 4.png" alt="">
-                    <p class="timbers__location">AUKLAND</p>
-                    <h6>100 x 50mm x 6.0m H3.2 Fence Rail</h6>
-                    <h6 class="timbers__price">$29.99</h6>
+                <div class="timbers__products">
+                    <div class="timbers__product-1">
+                        <img src="Assets/product 1.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">90mm x 45mm H3.2 Machine Gauged</h6>
+                        <h6 class="timbers__price">$159.99</h6>
+                    </div>
+                    <div class="timbers__product-2">
+                        <img src="Assets/product 2.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">90mm x 19mm Premium Pine Decking</h6>
+                        <h6 class="timbers__price">$119.99</h6>
+                    </div>
+                    <div class="timbers__product-3">
+                        <img src="Assets/product 3.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">150x19mm - 1.8m High Timber Fence Paling</h6>
+                        <h6 class="timbers__price">$39.99</h6>
+                    </div>
+                    <div class="timbers__product-4">
+                        <img src="Assets/product 4.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">100 x 50mm x 6.0m H3.2 Fence Rail</h6>
+                        <h6 class="timbers__price">$29.99</h6>
+                    </div>
                 </div>
             </div>    
+        </section>
+
+        <section>
+            <div class="section__dealers">
+                <div class="dealers__timber">
+                </div>
+                <div class="dealers__order">
+                    <div class="dealers__order-container">
+                        <h3>Responsible Forestry.<br>Quality Timber.</h3>
+                        <button class="btn--white">ORDER NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__browse">
+                <div class="browse__container-first">
+                    <div class="browse__hardwares">
+                        <h6>BROWSE NOW</h6>
+                        <h4>Hardwares</h4>
+                        <button class="btn--white">SHOP NOW</button>
+                    </div>
+                </div>
+                <div class="browse__container-second">
+                    <div class="browse__maple">
+                        <h6>TAKE A LOOK</h6>
+                        <h4>Rift Sawn Soft Maple</h4>
+                        <button class="btn--white">SHOP NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__roundwood">
+                <div class="roundwood__container">
+                    <p>FEATURED PRODUCT</p>
+                    <h1>TIMBER RETAINING WALLS<br>AND ROUNDWOOD</h1>
+                    <p>Building a timber retaining wall is a popular and easy DIY project. Perfect for turning that sloping, unusable yard space into a level, erosion free masterpiece! If done properly, they do a good job of tidying up the place and make mowing the lawns a cinch.</p>
+                    <p>We stock a large selection of round and square posts, TG&V, and standard retaining boards, as well as all that other important stuff like drainage, nails and concrete – yup we have you covered if you’re building retaining walls in Auckland!</p>
+                    <p>Whether you’re a seasoned professional or have no idea where to start, come and see us. We can set you up with all the equipment and advice you need to get started.</p>
+                    <p>See our Trade Me specials below and get cracking on your new retaining wall</p>
+                    <button class="btn--white">SHOP NOW</button>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section__products">
+                <div class="timbers__heading">
+                    <h1>Products</h1>
+                </div>
+                <div class="timbers__products">
+                    <div class="timbers__product-1">
+                        <img src="Assets/product 1.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">90mm x 45mm H3.2 Machine Gauged</h6>
+                        <h6 class="timbers__price">$159.99</h6>
+                    </div>
+                    <div class="timbers__product-2">
+                        <img src="Assets/product 2.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">90mm x 19mm Premium Pine Decking</h6>
+                        <h6 class="timbers__price">$119.99</h6>
+                    </div>
+                    <div class="timbers__product-3">
+                        <img src="Assets/product 3.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">150x19mm - 1.8m High Timber Fence Paling</h6>
+                        <h6 class="timbers__price">$39.99</h6>
+                    </div>
+                    <div class="timbers__product-4">
+                        <img src="Assets/product 4.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">100 x 50mm x 6.0m H3.2 Fence Rail</h6>
+                        <h6 class="timbers__price">$29.99</h6>
+                    </div>
+                </div>
+                <div class="timbers__products">
+                    <div class="timbers__product-5">
+                        <img src="Assets/product 1.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">90mm x 45mm H3.2 Machine Gauged</h6>
+                        <h6 class="timbers__price">$159.99</h6>
+                    </div>
+                    <div class="timbers__product-6">
+                        <img src="Assets/product 2.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">90mm x 19mm Premium Pine Decking</h6>
+                        <h6 class="timbers__price">$119.99</h6>
+                    </div>
+                    <div class="timbers__product-7">
+                        <img src="Assets/product 3.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">150x19mm - 1.8m High Timber Fence Paling</h6>
+                        <h6 class="timbers__price">$39.99</h6>
+                    </div>
+                    <div class="timbers__product-8">
+                        <img src="Assets/product 4.png" alt="">
+                        <p class="timbers__location">AUKLAND</p>
+                        <h6 class="timbers__name">100 x 50mm x 6.0m H3.2 Fence Rail</h6>
+                        <h6 class="timbers__price">$29.99</h6>
+                    </div>
+                </div>
+                <div class="products__pagination">
+                    <a href="#"><img src="Assets/Group 1.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 2.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 3.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 4.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 5.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 6.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 7.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 8.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 9.png" alt=""></a>
+                    <a href="#"><img src="Assets/Group 10.png" alt=""></a>
+                </div>
+            </div>    
+        </section>
+        
+        <section>
+            <div class="section__newsletter">
+                <div class="newsletter__container">
+                    <h1>Newsletter</h1>
+                    <p>Enter your email address for our mailing list to keep your self update.</p>
+                    <div class="newsletter__input-icon">
+                    <input class="newsletter__input" type="email" placeholder="Enter your Email Address">
+                    <img class="newsletter__icon" src="Assets/email.png" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <footer>
@@ -184,5 +318,5 @@
                 </div>
             </div>
         </footer>
-</body>
+    </body>
 </html>
