--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     </ul>
                 </div>
                 <div class="footer__quick-links">
-                    <h5>Customer</h5>
+                    <h5>Quick Links</h5>
                     <ul class="footer__unordered">
                         <li class="footer__list"><a href="#">Home</a></li>
                         <li class="footer__list"><a href="#">New Products</a></li>
