--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <div class="footer">
                 <div class="footer__logo">
                     <a href="#"><img src="Assets/Timber dealer logo-02 1.png" alt=""></a>
-                    <p>For any urgent enquiries, please call us on (09) 273 9471 or email us at sales@hillumber.co.nz</p>
+                    <p>For any urgent enquiries, please call us on (09)<br>273 9471 or email us at sales@hillumber.co.nz</p>
                     <img src="Assets/shoplocal.png" alt="">
                 </div>
                 <div class="footer__customer">
